// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID="test_keyboardAvoidingView"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="test_view_mainContainer"
  >
    <View
      style={
        Object {
          "paddingLeft": 70,
          "paddingRight": 70,
        }
      }
      testID="test_view_input"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#86939e",
              "flexDirection": "row",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <Text />
          </View>
          <TextInput
            allowFontScaling={true}
            editable={true}
            onChangeText={[Function]}
            placeholder="Mail"
            placeholderTextColor="#86939e"
            rejectResponderTermination={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#242424",
                "flex": 1,
                "fontSize": 18,
                "minHeight": 40,
              }
            }
            testID="test_input_email"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          style={
            Object {
              "color": "#ff190c",
              "fontSize": 12,
              "margin": 5,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#86939e",
              "flexDirection": "row",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <Text />
          </View>
          <TextInput
            allowFontScaling={true}
            editable={true}
            onChangeText={[Function]}
            placeholder="Mot de passe"
            placeholderTextColor="#86939e"
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#242424",
                "flex": 1,
                "fontSize": 18,
                "minHeight": 40,
              }
            }
            testID="test_input_password"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          style={
            Object {
              "color": "#ff190c",
              "fontSize": 12,
              "margin": 5,
            }
          }
        />
      </View>
    </View>
    <View
      testID="test_view_error-button"
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "red",
            "fontSize": 17,
            "paddingBottom": 25,
          }
        }
        testID="test_text_error"
      >
        
      </Text>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="test_button_signIn"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#ba473c",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "width": 150,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Se connecter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "paddingTop": 30,
        }
      }
      testID="test_view_navigation"
    >
      <Text
        testID="test_text_beforeNavigation"
      >
        Vous n'avez pas encore de compte ?
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "opacity": 1,
          }
        }
        testID="test_touchableOpacity_navigation"
      >
        <Text
          style={
            Object {
              "color": "#ba473c",
            }
          }
          testID="test_text_navigation"
        >
          S'inscrire
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Home /> renders default elements and styles: test Email Input style 1`] = `
Object {
  "alignSelf": "center",
  "color": "#242424",
  "flex": 1,
  "fontSize": 18,
  "minHeight": 40,
}
`;

exports[`<Home /> renders default elements and styles: test Email Placeholder style 1`] = `
Object {
  "alignItems": "center",
  "borderBottomWidth": 1,
  "borderColor": "#86939e",
  "flexDirection": "row",
  "transform": Array [
    Object {
      "translateX": 0,
    },
  ],
}
`;

exports[`<Home /> renders default elements and styles: test Error Text style 1`] = `
Object {
  "alignSelf": "center",
  "color": "red",
  "fontSize": 17,
  "paddingBottom": 25,
}
`;

exports[`<Home /> renders default elements and styles: test KeyboardAvoidingView style 1`] = `
Object {
  "flex": 1,
}
`;

exports[`<Home /> renders default elements and styles: test MainContainer style 1`] = `
Object {
  "flex": 1,
  "justifyContent": "center",
}
`;

exports[`<Home /> renders default elements and styles: test Navigation Text style 1`] = `
Object {
  "color": "#ba473c",
}
`;

exports[`<Home /> renders default elements and styles: test Navigation TouchableOpacity style 1`] = `
Object {
  "alignSelf": "center",
  "opacity": 1,
}
`;

exports[`<Home /> renders default elements and styles: test Navigation View style 1`] = `
Object {
  "alignSelf": "center",
  "paddingTop": 30,
}
`;

exports[`<Home /> renders default elements and styles: test Password Input style 1`] = `
Object {
  "alignSelf": "center",
  "color": "#242424",
  "flex": 1,
  "fontSize": 18,
  "minHeight": 40,
}
`;

exports[`<Home /> renders default elements and styles: test Password Placeholder style 1`] = `
Object {
  "alignItems": "center",
  "borderBottomWidth": 1,
  "borderColor": "#86939e",
  "flexDirection": "row",
  "transform": Array [
    Object {
      "translateX": 0,
    },
  ],
}
`;

exports[`<Home /> renders default elements and styles: test SignIn Button style 1`] = `
Object {
  "alignItems": "center",
  "alignSelf": "center",
  "backgroundColor": "#ba473c",
  "borderColor": "#2089dc",
  "borderRadius": 3,
  "borderWidth": 0,
  "flexDirection": "row",
  "justifyContent": "center",
  "padding": 8,
  "width": 150,
}
`;

exports[`<Home /> renders default elements and styles: test SignIn Text style 1`] = `
Object {
  "color": "white",
  "fontSize": 18,
  "paddingVertical": 1,
  "textAlign": "center",
}
`;

exports[`<Home /> renders default elements and styles: test View Input style 1`] = `
Object {
  "paddingLeft": 70,
  "paddingRight": 70,
}
`;

exports[`renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
  testID="test_keyboardAvoidingView"
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
      }
    }
    testID="test_view_mainContainer"
  >
    <View
      style={
        Object {
          "paddingLeft": 70,
          "paddingRight": 70,
        }
      }
      testID="test_view_input"
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#86939e",
              "flexDirection": "row",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <Text />
          </View>
          <TextInput
            allowFontScaling={true}
            editable={true}
            onChangeText={[Function]}
            placeholder="Mail"
            placeholderTextColor="#86939e"
            rejectResponderTermination={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#242424",
                "flex": 1,
                "fontSize": 18,
                "minHeight": 40,
              }
            }
            testID="test_input_email"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          style={
            Object {
              "color": "#ff190c",
              "fontSize": 12,
              "margin": 5,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "100%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#86939e",
              "flexDirection": "row",
              "transform": Array [
                Object {
                  "translateX": 0,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 40,
                "justifyContent": "center",
                "marginVertical": 4,
                "paddingRight": 4,
              }
            }
          >
            <Text />
          </View>
          <TextInput
            allowFontScaling={true}
            editable={true}
            onChangeText={[Function]}
            placeholder="Mot de passe"
            placeholderTextColor="#86939e"
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Object {
                "alignSelf": "center",
                "color": "#242424",
                "flex": 1,
                "fontSize": 18,
                "minHeight": 40,
              }
            }
            testID="test_input_password"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <Text
          style={
            Object {
              "color": "#ff190c",
              "fontSize": 12,
              "margin": 5,
            }
          }
        />
      </View>
    </View>
    <View
      testID="test_view_error-button"
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "red",
            "fontSize": 17,
            "paddingBottom": 25,
          }
        }
        testID="test_text_error"
      >
        
      </Text>
      <View
        style={
          Array [
            Object {
              "borderRadius": 3,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 3,
            },
            undefined,
            false,
          ]
        }
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "busy": false,
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="test_button_signIn"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#ba473c",
                "borderColor": "#2089dc",
                "borderRadius": 3,
                "borderWidth": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 8,
                "width": 150,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "white",
                  "fontSize": 18,
                  "paddingVertical": 1,
                  "textAlign": "center",
                }
              }
            >
              Se connecter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "center",
          "paddingTop": 30,
        }
      }
      testID="test_view_navigation"
    >
      <Text
        testID="test_text_beforeNavigation"
      >
        Vous n'avez pas encore de compte ?
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "opacity": 1,
          }
        }
        testID="test_touchableOpacity_navigation"
      >
        <Text
          style={
            Object {
              "color": "#ba473c",
            }
          }
          testID="test_text_navigation"
        >
          S'inscrire
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders default elements and styles: test Email Input style 1`] = `
Object {
  "alignSelf": "center",
  "color": "#242424",
  "flex": 1,
  "fontSize": 18,
  "minHeight": 40,
}
`;

exports[`renders default elements and styles: test Email Placeholder style 1`] = `
Object {
  "alignItems": "center",
  "borderBottomWidth": 1,
  "borderColor": "#86939e",
  "flexDirection": "row",
  "transform": Array [
    Object {
      "translateX": 0,
    },
  ],
}
`;

exports[`renders default elements and styles: test Error Text style 1`] = `
Object {
  "alignSelf": "center",
  "color": "red",
  "fontSize": 17,
  "paddingBottom": 25,
}
`;

exports[`renders default elements and styles: test KeyboardAvoidingView style 1`] = `
Object {
  "flex": 1,
}
`;

exports[`renders default elements and styles: test MainContainer style 1`] = `
Object {
  "flex": 1,
  "justifyContent": "center",
}
`;

exports[`renders default elements and styles: test Navigation Text style 1`] = `
Object {
  "color": "#ba473c",
}
`;

exports[`renders default elements and styles: test Navigation TouchableOpacity style 1`] = `
Object {
  "alignSelf": "center",
  "opacity": 1,
}
`;

exports[`renders default elements and styles: test Navigation View style 1`] = `
Object {
  "alignSelf": "center",
  "paddingTop": 30,
}
`;

exports[`renders default elements and styles: test Password Input style 1`] = `
Object {
  "alignSelf": "center",
  "color": "#242424",
  "flex": 1,
  "fontSize": 18,
  "minHeight": 40,
}
`;

exports[`renders default elements and styles: test Password Placeholder style 1`] = `
Object {
  "alignItems": "center",
  "borderBottomWidth": 1,
  "borderColor": "#86939e",
  "flexDirection": "row",
  "transform": Array [
    Object {
      "translateX": 0,
    },
  ],
}
`;

exports[`renders default elements and styles: test SignIn Button style 1`] = `
Object {
  "alignItems": "center",
  "alignSelf": "center",
  "backgroundColor": "#ba473c",
  "borderColor": "#2089dc",
  "borderRadius": 3,
  "borderWidth": 0,
  "flexDirection": "row",
  "justifyContent": "center",
  "padding": 8,
  "width": 150,
}
`;

exports[`renders default elements and styles: test SignIn Text style 1`] = `
Object {
  "color": "white",
  "fontSize": 18,
  "paddingVertical": 1,
  "textAlign": "center",
}
`;

exports[`renders default elements and styles: test View Input style 1`] = `
Object {
  "paddingLeft": 70,
  "paddingRight": 70,
}
`;
